Try exporting ROCM path

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -52,8 +52,8 @@ jobs:
       run: |
           echo "PATH=$HOME/.local/bin:${{env.ROCM_PATH}}/bin:${{env.HIP_PATH}}/bin:$PATH" >> $GITHUB_PATH &&
           echo "LD_LIBRARY_PATH=${{env.ROCM_PATH}}:${{env.HIP_PATH}}:/usr/local/lib:${LD_LIBRARY_PATH}" >> $GITHUB_ENV &&
-          echo "ROCM_PATH=${{env.ROCM_PATH}}" >> $GITHUB_ENV
-          echo "HIP_PATH=${{env.HIP_PATH}}" >> $GITHUB_ENV
+          echo "export ROCM_PATH=${{env.ROCM_PATH}}"
+          echo "export HIP_PATH=${{env.HIP_PATH}}"
 
     - name: configure
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release -DKokkos_ENABLE_HIP=ON -DCMAKE_CXX_COMPILER=amdclang++ -DKokkos_ARCH_VEGA90A=ON
