--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -43,7 +43,7 @@ jobs:
           sudo apt-get update &&
           sudo apt-get install -y software-properties-common wget gnupg2 &&
           curl -fsSL https://repo.radeon.com/rocm/rocm.gpg.key | sudo gpg --dearmor -o /etc/apt/trusted.gpg.d/rocm-keyring.gpg
-          echo 'deb [arch=amd64 signed-by=/etc/apt/trusted.gpg.d/rocm-keyring.gpg] https://repo.radeon.com/rocm/apt/5.7.1 focal main' | sudo tee /etc/apt/sources.list.d/rocm.list &&
+          echo 'deb [arch=amd64 signed-by=/etc/apt/trusted.gpg.d/rocm-keyring.gpg] https://repo.radeon.com/rocm/apt/5.7.1 jammy main' | sudo tee /etc/apt/sources.list.d/rocm.list &&
           echo -e 'Package: *\nPin: release o=repo.radeon.com\nPin-Priority: 600' | sudo tee /etc/apt/preferences.d/rocm-pin-600 &&
           sudo apt update &&
           sudo apt-get install -y build-essential python3-pip clang g++ rocm-dev hip-dev rocm-libs
