--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -5,7 +5,45 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+
 jobs:
+  build_rocm:
+    runs-on: ubuntu-latest
+    env:
+      ROCM_PATH: /opt/rocm
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        submodules: recursive
+
+    - name: install rocm
+      # install instructions from
+      # https://rocm.docs.amd.com/en/latest/deploy/linux/os-native/install.html
+      run: |
+        sudo mkdir --parents --mode=0755 /etc/apt/keyrings
+        wget https://repo.radeon.com/rocm/rocm.gpg.key -O - | \
+          gpg --dearmor | sudo tee /etc/apt/keyrings/rocm.gpg > /dev/null
+        for ver in 5.3.3 5.4.6 5.5.3 5.6.1 5.7.1; do
+          echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/rocm.gpg] https://repo.radeon.com/rocm/apt/$ver jammy main" \
+            | sudo tee --append /etc/apt/sources.list.d/rocm.list
+        done
+        echo -e 'Package: *\nPin: release o=repo.radeon.com\nPin-Priority: 600' \
+          | sudo tee /etc/apt/preferences.d/rocm-pin-600
+        sudo apt update
+        sudo apt install rocm-hip-sdk rocm-hip-libraries
+        sudo tee --append /etc/ld.so.conf.d/rocm.conf <<EOF
+        /opt/rocm/lib
+        /opt/rocm/lib64
+        EOF
+        sudo ldconfig
+        echo "/opt/rocm/bin" >> $GITHUB_PATH
+
+    - name: configure
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release -DKokkos_ENABLE_HIP=ON -DKokkos_ARCH_AMD_GFX90A=ON -DCMAKE_CXX_COMPILER=hipcc
+    - name: build
+      run: cmake --build ${{github.workspace}}/build --config Release
+
+
   build_cuda:
     runs-on: ubuntu-latest
     steps:
