--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -1,13 +1,14 @@
-add_library(util STATIC src/vector3.cpp src/id.cpp)
+add_library(util STATIC util/vector3.cpp util/id.cpp)
 target_link_libraries(util PUBLIC Kokkos::kokkos)
 target_link_libraries(util PUBLIC doctest)
+target_include_directories(util PUBLIC .)
 
 
 if (Ibis_BUILD_TESTS)
     add_executable(util_unittest 
 		   test/unittest.cpp 
-		   src/vector3.cpp 
-		   src/id.cpp)
+		   util/vector3.cpp 
+		   util/id.cpp)
     # target_compile_options(util_unittest -g)
     target_link_libraries(util_unittest 	
 	PRIVATE doctest)
