--- a/src/gas/CMakeLists.txt
+++ b/src/gas/CMakeLists.txt
@@ -1,9 +1,9 @@
 add_library(
 	gas
 	STATIC
-	src/gas_state.cpp
-	src/gas_model.cpp
-	src/flow_state.cpp
+	gas/gas_state.cpp
+	gas/gas_model.cpp
+	gas/flow_state.cpp
 )
 
 target_link_libraries(
@@ -12,4 +12,10 @@ target_link_libraries(
 	Kokkos::kokkos 
 	nlohmann_json::nlohmann_json
 	util
+)
+
+target_include_directories(
+	gas
+	PUBLIC
+	.
 )
