More organisation of directory structure

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -1,6 +1,5 @@
 add_library(util STATIC util/vector3.cpp util/id.cpp)
-target_link_libraries(util PUBLIC Kokkos::kokkos)
-target_link_libraries(util PUBLIC doctest)
+target_link_libraries(util PUBLIC Kokkos::kokkos doctest)
 target_include_directories(util PUBLIC .)
 
 
@@ -11,8 +10,6 @@ if (Ibis_BUILD_TESTS)
 		   util/id.cpp)
     # target_compile_options(util_unittest -g)
     target_link_libraries(util_unittest 	
-	PRIVATE doctest)
-    target_link_libraries(util_unittest 
-	PUBLIC Kokkos::kokkos)
+	PRIVATE Kokkos::kokkos doctest)
     add_test(NAME util_unittest COMMAND util_unittest)
 endif(Ibis_BUILD_TESTS)
