--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(util STATIC util/vector3.cpp util/id.cpp)
+add_library(util STATIC util/vector3.cpp util/id.cpp util/geom.cpp)
 target_link_libraries(util PUBLIC Kokkos::kokkos doctest)
 target_include_directories(util PUBLIC .)
 
@@ -7,7 +7,8 @@ if (Ibis_BUILD_TESTS)
     add_executable(util_unittest 
 		   test/unittest.cpp 
 		   util/vector3.cpp 
-		   util/id.cpp)
+		   util/id.cpp
+		   util/geom.cpp)
     # target_compile_options(util_unittest -g)
     target_link_libraries(util_unittest 	
 	PRIVATE Kokkos::kokkos doctest)
