--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -76,9 +76,18 @@ jobs:
 
       # Set up a matrix to run various configurations
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         build_type: [Release]
-        cpp_compiler: [g++, clang++]
+        cpp_compiler: [g++, clang++, cl]
+        exclude:
+          - os: ubuntu-latest
+            cpp_compiler: cl
+          - os: macos-latest
+            cpp_compiler: cl
+          - os: windows-latest
+            cpp_compiler: g++
+          - os: windows-latest
+            cpp_compiler: clang++
 
     steps:
     - uses: actions/checkout@v3
