--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,7 @@ endif(Ibis_BUILD_TESTS)
 
 # be picky about warnings
 if (MSVC)
-    add_compile_options(/W4 /WX)
+    add_compile_options(/W4)
 else()
     add_compile_options( -Wall -Wextra -Wpedantic )
 endif()
