--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -1,16 +1,31 @@
-add_library(util STATIC util/vector3.cpp util/id.cpp util/geom.cpp)
+add_library(
+    util 
+    STATIC 
+    util/vector3.cpp
+    util/id.cpp
+    util/geom.cpp
+    util/ragged_array.cpp
+)
 target_link_libraries(util PUBLIC Kokkos::kokkos doctest)
 target_include_directories(util PUBLIC .)
 
 
 if (Ibis_BUILD_TESTS)
-    add_executable(util_unittest 
-		   test/unittest.cpp 
-		   util/vector3.cpp 
-		   util/id.cpp
-		   util/geom.cpp)
-    # target_compile_options(util_unittest -g)
-    target_link_libraries(util_unittest 	
-	PRIVATE Kokkos::kokkos doctest)
+    add_executable(
+	util_unittest 
+	test/unittest.cpp 
+	util/vector3.cpp 
+	util/id.cpp
+	util/geom.cpp
+	util/ragged_array.cpp
+    )
+
+    target_link_libraries(
+	util_unittest 	
+	PRIVATE
+	Kokkos::kokkos
+	doctest
+    )
+
     add_test(NAME util_unittest COMMAND util_unittest)
 endif(Ibis_BUILD_TESTS)
