--- a/src/finite_volume/CMakeLists.txt
+++ b/src/finite_volume/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(
 	finite_volume/primative_conserved_conversion.cpp
 	finite_volume/conserved_quantities.cpp
 	finite_volume/boundaries/boundary.cpp
+	finite_volume/gradient.cpp
 )
 
 target_link_libraries(
@@ -31,6 +32,7 @@ if (Ibis_BUILD_TESTS)
     	finite_volume/flux_calc.cpp 
     	finite_volume/flux_calculators/hanel.cpp
     	finite_volume/flux_calculators/ausmdv.cpp
+	finite_volume/gradient.cpp
     )
     # target_compile_options(finite_volume_unittest -g)
     target_link_libraries(
