--- a/src/finite_volume/CMakeLists.txt
+++ b/src/finite_volume/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(
 	finite_volume/conserved_quantities.cpp
 	finite_volume/boundaries/boundary.cpp
 	finite_volume/gradient.cpp
+	finite_volume/limiter.cpp
 )
 
 target_link_libraries(
@@ -33,6 +34,7 @@ if (Ibis_BUILD_TESTS)
     	finite_volume/flux_calculators/hanel.cpp
     	finite_volume/flux_calculators/ausmdv.cpp
 	finite_volume/gradient.cpp
+	finite_volume/limiter.cpp
     )
     # target_compile_options(finite_volume_unittest -g)
     target_link_libraries(
