Added infrustructure for passing transport properties around

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -1,2 +1,2 @@
 install(DIRECTORY defaults DESTINATION ${CMAKE_INSTALL_DATADIR})
-install(DIRECTORY gas_models DESTINATION ${CMAKE_INSTALL_DATADIR})
+install(DIRECTORY species_database DESTINATION ${CMAKE_INSTALL_DATADIR})
