--- a/docs/_data/documentation_menu.yml
+++ b/docs/_data/documentation_menu.yml
@@ -1,11 +1,8 @@
-- name: Examples
-  link: /examples/examples
-- name: Documentation
-  link: /documentation/docs
-  dropdown:
+- label: Documentation
+  items:
     - name: Getting Started
       link: /documentation/getting_started
     - name: User Guide
       link: /documentation/user_guide/user_guide
-    - name: Developer Docs
+    - name: Developer Guide
       link: /documentation/dev_docs/dev_docs
