--- a/docs/_data/user_guide_menu.yml
+++ b/docs/_data/user_guide_menu.yml
@@ -6,6 +6,18 @@
   items:
     - name: Convective Flux
       link: /documentation/user_guide/fluid_settings/convective_flux
+    - name: Viscous Flux
+      link: /documentation/user_guide/fluid_settings/viscous_flux
+    - name: Boundary Conditions
+      link: /documentation/user_guide/fluid_settings/boundary_conditions
+- label: Gas Model
+  items:
+    - name: Gas Model
+      link: /documentation/user_guide/gas_model/gas_model
+- label: Grid
+  items:
+    - name: Grid
+      link: /documentation/user_guide/grid/grid
 - label: Solvers
   items:
     - name: Explicit Solver
