New supersonic jet example, and added more docs

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,10 @@
 remote_theme: chrisrhymes/bulma-clean-theme
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      hero_image: "/examples/supersonic_jet_test.png"
+      title: Ibis
