--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "extern/pybind11"]
 	path = extern/pybind11
 	url = git@github.com:pybind/pybind11.git
+[submodule "extern/CLI11"]
+	path = extern/CLI11
+	url = git@github.com:CLIUtils/CLI11.git
