Move convective flux into its own module

--- a/src/finite_volume/CMakeLists.txt
+++ b/src/finite_volume/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(
 	STATIC 
 	finite_volume/finite_volume.cpp 
 	finite_volume/flux_calc.cpp 
+	finite_volume/convective_flux.cpp
 	finite_volume/flux_calculators/hanel.cpp
 	finite_volume/flux_calculators/ausmdv.cpp
 	finite_volume/flux_calculators/ldfss2.cpp
@@ -32,6 +33,7 @@ if (Ibis_BUILD_TESTS)
     	finite_volume_unittest 
     	test/unittest.cpp 
     	finite_volume/flux_calc.cpp 
+			finite_volume/convective_flux.cpp
     	finite_volume/flux_calculators/hanel.cpp
     	finite_volume/flux_calculators/ausmdv.cpp
 			finite_volume/flux_calculators/ldfss2.cpp
