--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,6 +15,8 @@ defaults:
     values:
       sidebar:
         nav: "docs"
+      toc: true
+      toc_sticky: true
 
 plugins:
   - jekyll-paginate
