More progress on exact solution test for prandtl-meyer expansion

--- a/tests/exact_solutions/prandtl_meyer_expansion/makefile
+++ b/tests/exact_solutions/prandtl_meyer_expansion/makefile
@@ -17,7 +17,7 @@ run:
 .PHONY: post
 post:
 	# ibis post plot
-	ibis post plot --format=vtk-text
+	ibis post plot --format=vtk-text --add=cell_centre
 
 .PHONY: clean
 clean:
