Add rusanov flux

--- a/src/finite_volume/CMakeLists.txt
+++ b/src/finite_volume/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(
 	  finite_volume/flux_calculators/hanel.cpp
 	  finite_volume/flux_calculators/ausmdv.cpp
 	  finite_volume/flux_calculators/ldfss2.cpp
+	  finite_volume/flux_calculators/rusanov.cpp
 	  finite_volume/primative_conserved_conversion.cpp
 	  finite_volume/conserved_quantities.cpp
 	  finite_volume/boundaries/boundary.cpp
@@ -39,6 +40,7 @@ if (Ibis_BUILD_TESTS)
     	  finite_volume/flux_calculators/hanel.cpp
     	  finite_volume/flux_calculators/ausmdv.cpp
 			  finite_volume/flux_calculators/ldfss2.cpp
+			  finite_volume/flux_calculators/rusanov.cpp
 			  finite_volume/gradient.cpp
 			  finite_volume/limiter.cpp
     )
