--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -89,7 +89,7 @@ jobs:
       #       cpp_compiler: clang++
 
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-22.04, macos-latest]
         build_type: [Release]
         cpp_compiler: [g++, clang++]
 
