Get a few simple MPI tests working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,8 @@ add_subdirectory(extern/pybind11 EXCLUDE_FROM_ALL)
 
 # MPI configuration
 if (Ibis_ENABLE_MPI)
+    find_package(MPI COMPONENTS CXX)
+    include_directories(SYSTEM ${MPI_INCLUDE_PATH})
     add_compile_options(-DIbis_ENABLE_MPI)
 endif(Ibis_ENABLE_MPI)
 
